# edited

./: Cargo.toml  README.md
cli-editor/: Cargo.toml  README.md
cli-editor/src/: lib.rs
edited/: Cargo.toml  README.md
edited/src/: lib.rs  tests.rs
example/: Cargo.toml  README.md
example/src/: main.rs
tests/cli-editor-tests/: Cargo.toml  LICENSE-MIT
tests/cli-editor-tests/src/: lib.rs
tests/edited-tests/: Cargo.toml
