[package]
name = "cli-editor"
version = "0.0.0"
edition = "2021"
description = "cli-editor, a macro for deriving a cli editor for custom structs"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/edited"
repository = "https://github.com/Nejat/edited"
keywords = ["editor", "cli", "struct"]
authors = ["Nejat<nejatoz@gmail.com>"]
categories = ["command-line-utilities"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

[dev-dependencies]
version-sync = "0.9"

